--- a/curriculo/style.css
+++ b/curriculo/style.css
@@ -72,7 +72,7 @@ p.big {
         width: 100%;
         border: 1px solid teal;
         color: #f5fefd;
-        background-color: teal;
+        background-color: red;
     }
 
     .big {
