--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 .container {
     margin: auto;
     background-color: #f5fefdbd;
-    color: black;
+    color: #090668;
     width: 500px;
     border: 2px solid black;
     
@@ -67,10 +67,6 @@ ul {
     font-family: "Lato", sans-serif;
 }
 
-p.big {
-    margin-right: 20px;
-}
-
 .tool {
     display: flex;
     gap: 10px;
@@ -80,18 +76,16 @@ p.big {
     width: 50px;
 }
 
-@media(max-width: 360px) {
+.tool-icon:hover {
+	transform: scale(1.2);
+	transition: 0.8s
+}
+@media(max-width: 500px) {
     
     .container {
         width: 100%;
-        border: 1px solid teal;
-        color: black;
-        background-color: white;
     }
 
-    .big {
-        padding-bottom: 15px;
-    }
 
 }
 
